--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "@auth/prisma-adapter": "^1.2.0",
     "@prisma/client": "^5.9.0",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.320.0",
-    "next": "14.1.0",
+    "next": "^14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
