--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "prepare": "prisma generate"
+    "lint": "next lint"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
