--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fullstackweek-barber",
+  "name": "barbeariafsw",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,29 +12,26 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.1.0",
-    "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^5.8.1",
+    "@auth/prisma-adapter": "^1.2.0",
+    "@prisma/client": "^5.9.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
-    "lucide-react": "^0.317.0",
-    "next": "14.1.0",
+    "lucide-react": "^0.320.0",
+    "next": "^14.1.0",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.9",
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
-    "react-hook-form": "^7.50.1",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -44,7 +41,9 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
-    "prisma": "^5.8.1",
+    "prettier": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "prisma": "^5.9.0",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5"
