--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.2.0",
     "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "^5.20.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -27,6 +28,7 @@
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.9",
+    "prisma": "^5.20.0",
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
